tests/NormalTests/paczka1/fuzzy1/37684018.err
Error in line 1: S147 S147 34,1
Error in line 3: S147 A769 24,9
Error in line 8: S147 S647 34,5
Error in line 18: FIE S738 92,0
Error in line 12: Y18x S647 6,5
Error in line 38: HwmH S738 91,®
